--- a/manifest.json
+++ b/manifest.json
@@ -11,5 +11,16 @@
   "icons": {"128": "icon128x128.png"},
   "web_accessible_resources": [
     "MaterialIcons-Regular.woff2"
-  ]
+  ],
+  "permissions": [
+    "storage",
+    "alarms"
+  ],
+  "background": {
+    "persistent": false,
+    "scripts": ["background.js"]
+  },
+  "browser_action": {
+    "default_title": "Furball"
+  }
 }
