--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Furball",
-  "description": "Adds tons of good features to Scratch by the LLK Group at MIT.",
+  "description": "The ultimate Scratch experience.",
   "version": "1.0",
   "content_scripts": [{
     "matches": ["https://scratch.mit.edu/*"],
@@ -14,7 +14,8 @@
   ],
   "permissions": [
     "storage",
-    "alarms"
+    "alarms",
+    "notifications"
   ],
   "background": {
     "persistent": false,
