--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -4,7 +4,7 @@
   "description": "The ultimate Scratch experience.",
   "version": "1.3",
   "content_scripts": [{
-    "matches": ["https://scratch.mit.edu/*"],
+    "matches": ["https://*.scratch.mit.edu/*"],
     "js": ["injected.js"],
     "css": ["injected.css"]
   }],
