--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -26,5 +26,8 @@
   "options_ui": {
     "page": "options.html",
     "chrome_style": true
-  }
+  },
+  "web_accessible_resources": [
+    "MaterialIcons-Regular.woff2"
+  ]
 }
