--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -21,7 +21,7 @@
     "scripts": ["background.js"]
   },
   "browser_action": {
-    "default_title": "Furball"
+    "default_title": "Furball - Check Messages"
   },
   "options_ui": {
     "page": "options.html",
