--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -21,6 +21,9 @@
     "scripts": ["background.js"]
   },
   "browser_action": {
+    "default_icon": {
+      "64": "icon64x64.png"
+    },
     "default_title": "Furball - Check Messages"
   },
   "options_ui": {
